--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  logger: ^2.5.0
+  get_it: ^8.0.3
+  shared_preferences: ^2.5.3
+  go_router: ^15.1.3
 
 dev_dependencies:
   flutter_test:
