--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Miscellaneous
+*.env
 *.class
 *.log
 *.pyc
@@ -32,7 +33,6 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/core/constant/end_points.dart
 
 # Symbolication related
 app.*.symbols
